Do not cut off results due to their low score by default. At the moment our scoring is too bad anyway. In the future this should be come configurable through the service API.

BUG: 202123

svn path=/trunk/KDE/kdebase/runtime/; revision=1011339